[package]
name = "aya-bpf-macros"
version = "0.1.0"
authors = ["Alessandro Decina <alessandro.d@gmail.com>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "2.0", features = ["full"]}

[dev-dependencies]
aya-bpf = { path = "../bpf/aya-bpf" }
