[package]
name = "aya-bpf-macros"
version = "0.1.0"
authors = ["Alessandro Decina <alessandro.d@gmail.com>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, default-features = true, features = ["full"] }

[dev-dependencies]
aya-bpf = { workspace = true }
