[package]
name = "aya-build"
version = "0.1.1"
description = "Build-time support for aya projects"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true, default-features = true }
cargo_metadata = { workspace = true }
