[package]
authors.workspace = true
description = "Build-time support for aya projects"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "aya-build"
repository.workspace = true
rust-version.workspace = true
version = "0.1.2"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, default-features = true }
cargo_metadata = { workspace = true }
