[package]
name = "aya-ebpf-macros"
version = "0.1.1"
description = "Proc macros used by aya-ebpf"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
proc-macro2-diagnostics = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, default-features = true, features = ["full"] }

[dev-dependencies]
aya-ebpf = { path = "../ebpf/aya-ebpf", default-features = false }
