[package]
authors.workspace = true
description = "Proc macros used by aya-ebpf"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "aya-ebpf-macros"
repository.workspace = true
rust-version.workspace = true
version = "0.1.1"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
proc-macro2-diagnostics = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, default-features = true, features = ["full"] }

[dev-dependencies]
aya-ebpf = { path = "../ebpf/aya-ebpf", default-features = false }
