[package]
name = "aya-log-common"
version = "0.1.15"
description = "A logging library for eBPF programs."
keywords = ["bpf", "ebpf", "log", "logging"]
documentation = "https://docs.rs/aya-log"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
num_enum = { workspace = true }

[lib]
path = "src/lib.rs"
