[package]
authors.workspace = true
description = "A logging library for eBPF programs."
documentation = "https://docs.rs/aya-log"
edition.workspace = true
homepage.workspace = true
keywords = ["bpf", "ebpf", "log", "logging"]
license.workspace = true
name = "aya-log-common"
repository.workspace = true
rust-version.workspace = true
version = "0.1.15"

[lints]
workspace = true

[dependencies]
num_enum = { workspace = true }

[lib]
path = "src/lib.rs"
