[package]
description = "A logging library for eBPF programs."
documentation = "https://docs.rs/aya-log"
keywords = ["bpf", "ebpf", "log", "logging"]
name = "aya-log-common"
version = "0.1.16"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
num_enum = { workspace = true }

[lib]
path = "src/lib.rs"
