[package]
authors.workspace = true
description = "Proc macros used by aya-log-ebpf"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "aya-log-ebpf-macros"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lints]
workspace = true

[dependencies]
aya-log-common = { path = "../aya-log-common", version = "^0.1.14", default-features = false }
aya-log-parser = { path = "../aya-log-parser", version = "^0.1.13", default-features = false }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[lib]
proc-macro = true
