[package]
name = "aya-log-ebpf"
version = "0.1.0"
edition = "2018"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-common = { path = "../aya-log-common" }
ufmt = { version = "0.1", package = "aya-ufmt" }

[lib]
path = "src/lib.rs"

[profile.dev]
panic = "abort"
debug = 1
opt-level = 2
overflow-checks = false

[profile.release]
panic = "abort"

[workspace]
members = []