[package]
authors.workspace = true
description = "A parser for the aya log format strings"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "aya-log-parser"
repository.workspace = true
rust-version.workspace = true
version = "0.1.13"

[lints]
workspace = true

[dependencies]
aya-log-common = { path = "../aya-log-common", version = "^0.1.14", default-features = false }

[dev-dependencies]
assert_matches = { workspace = true }

[lib]
path = "src/lib.rs"
