[package]
description = "A parser for the aya log format strings"
name = "aya-log-parser"
version = "0.1.14"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aya-log-common = { path = "../aya-log-common", version = "^0.1.16", default-features = false }

[dev-dependencies]
assert_matches = { workspace = true }

[lib]
path = "src/lib.rs"
