[package]
name = "aya-log"
version = "0.2.1"
description = "A logging library for eBPF programs."
keywords = ["bpf", "ebpf", "log", "logging"]
readme = "README.md"
documentation = "https://docs.rs/aya-log"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
aya = { path = "../aya", version = "^0.13.1", features = ["async_tokio"] }
aya-log-common = { path = "../aya-log-common", version = "^0.1.15", default-features = false }
bytes = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
env_logger = { workspace = true }
testing_logger = { workspace = true }

[lib]
path = "src/lib.rs"
