[package]
authors.workspace = true
description = "A logging library for eBPF programs."
documentation = "https://docs.rs/aya-log"
edition.workspace = true
homepage.workspace = true
keywords = ["bpf", "ebpf", "log", "logging"]
license.workspace = true
name = "aya-log"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.2.1"

[lints]
workspace = true

[dependencies]
aya = { path = "../aya", version = "^0.13.1", features = ["async_tokio"] }
aya-log-common = { path = "../aya-log-common", version = "^0.1.15", default-features = false }
bytes = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
env_logger = { workspace = true }
testing_logger = { workspace = true }

[lib]
path = "src/lib.rs"
