[package]
description = "A logging library for eBPF programs."
documentation = "https://docs.rs/aya-log"
keywords = ["bpf", "ebpf", "log", "logging"]
name = "aya-log"
readme = "README.md"
version = "0.2.1"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
async_tokio = ["aya/async_tokio", "dep:tokio"]
async_std = ["aya/async_std", "dep:async-global-executor"]
async_compio = ["aya/async_compio", "dep:compio"]

[dependencies]
aya = { path = "../aya", version = "^0.13.1" }
aya-log-common = { path = "../aya-log-common", version = "^0.1.15", default-features = false }
bytes = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"], optional = true }
async-global-executor = { workspace = true, optional = true }
compio = { workspace = true, optional = true }

[dev-dependencies]
env_logger = { workspace = true }
testing_logger = { workspace = true }

[lib]
path = "src/lib.rs"
