[package]
authors.workspace = true
description = "An eBPF object file parsing library with BTF and relocation support."
documentation = "https://docs.rs/aya-obj"
edition.workspace = true
homepage.workspace = true
keywords = ["bpf", "btf", "ebpf", "elf", "object"]
license.workspace = true
name = "aya-obj"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.2.1"

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
hashbrown = { workspace = true, default-features = true }
log = { workspace = true }
object = { workspace = true, features = ["elf", "read_core"] }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
rbpf = { workspace = true }

[features]
std = ["thiserror/std"]
