[package]
authors.workspace = true
description = "A tool for generating bindings for Linux Kernel types"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "aya-tool"
publish = false
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, default-features = true }
bindgen = { workspace = true, default-features = true }
clap = { workspace = true, default-features = true, features = ["derive"] }
tempfile = { workspace = true }
thiserror = { workspace = true }
