[package]
description = "Aya XDP Dispatcher Implementation"
name = "aya-xdp-dispatcher"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aya = { path = "../aya", version = "0.13.2" }
aya-xdp-dispatcher-ebpf = { path = "../ebpf/aya-xdp-dispatcher-ebpf", version = "0.1.0" }
nix = { workspace = true, features = ["fs"] }
uuid = { workspace = true, features = ["v4"] }
thiserror = { workspace = true }
log = { workspace = true }
bytemuck = { workspace = true }

[build-dependencies]
aya-build = { path = "../aya-build", version = "0.1.3" }
aya-xdp-dispatcher-ebpf = { path = "../ebpf/aya-xdp-dispatcher-ebpf", version = "0.1.0" }
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
