[package]
description = "Aya XDP Dispatcher Implementation"
name = "aya-xdp-dispatcher"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aya = { path = "../aya", version = "0.13.2" }
aya-xdp-dispatcher-ebpf = { path = "../ebpf/aya-xdp-dispatcher-ebpf", version = "0.1.0" }
bytemuck = { workspace = true }
log = { workspace = true }
nix = { workspace = true, features = ["fs"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { path = "../aya-build", version = "0.1.3" }
aya-xdp-dispatcher-ebpf = { path = "../ebpf/aya-xdp-dispatcher-ebpf", version = "0.1.0" }
cargo_metadata = { workspace = true }
