[package]
description = "An eBPF library with a focus on developer experience and operability."
documentation = "https://docs.rs/aya"
keywords = ["bpf", "ebpf", "kernel", "linux"]
name = "aya"
readme = "README.md"
version = "0.13.2"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
assert_matches = { workspace = true }
aya-obj = { path = "../aya-obj", version = "^0.2.2", features = ["std"] }
bitflags = { workspace = true }
bytes = { workspace = true }
hashbrown = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
object = { workspace = true, features = ["elf", "read_core", "std", "write"] }
once_cell = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.5"
tempfile = { workspace = true }
test-case = { workspace = true }

[features]
bench = []

[[bench]]
name = "perf_buffer"
harness = false
required-features = ["bench"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "-D", "warnings"]
