[package]
description = "An eBPF library with a focus on developer experience and operability."
documentation = "https://docs.rs/aya"
keywords = ["bpf", "ebpf", "kernel", "linux"]
name = "aya"
readme = "README.md"
version = "0.13.2"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
assert_matches = { workspace = true }
aya-obj = { path = "../aya-obj", version = "^0.2.2" }
bitflags = { workspace = true }
bytes = { workspace = true }
# TODO(https://github.com/rust-lang/rust/issues/60896): Remove once
# `std::collections::hash_set::Entry` is stabilized.
hashbrown = { workspace = true, features = ["default-hasher", "equivalent"] }
libc = { workspace = true }
log = { workspace = true }
object = { workspace = true, features = ["elf", "read_core", "std", "write"] }
once_cell = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
nix = { workspace = true, features = ["net", "socket"] }
tempfile = { workspace = true }
test-case = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "-D", "warnings"]
