[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "init"
publish = false
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
nix = { workspace = true, features = ["fs", "mount", "reboot"] }
