[package]
name = "traffic-monitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "traffic-monitor"
path = "src/main.rs"

[dependencies]
aya = { path = "../aya", features = ["async_tokio"] }
aya-log = { path = "../aya-log" }
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "signal"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cidr = "0.2"
ipnet = "2.9"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"

[build-dependencies]
aya-build = { path = "../aya-build" }

[workspace]
members = []

[[example]]
name = "test-traffic"
path = "examples/test-traffic.rs"