[package]
name = "xtask"
version = "0.1.0"
publish = false
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
aya-tool = { path = "../aya-tool", version = "0.1.0", default-features = false }
cargo_metadata = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dialoguer = { workspace = true }
diff = { workspace = true }
indoc = { workspace = true }
proc-macro2 = { workspace = true }
public-api = { workspace = true }
quote = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
rustdoc-json = { workspace = true }
rustup-toolchain = { workspace = true }
syn = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
which = { workspace = true }
