[package]
name = "xtask"
publish = false
version = "0.1.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
ar = { workspace = true }
aya-tool = { path = "../aya-tool", version = "0.1.0", default-features = false }
cargo_metadata = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dialoguer = { workspace = true }
diff = { workspace = true }
indoc = { workspace = true }
proc-macro2 = { workspace = true }
public-api = { workspace = true }
quote = { workspace = true }
rustdoc-json = { workspace = true }
rustup-toolchain = { workspace = true }
syn = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
xz2 = { workspace = true }
