[package]
name = "aya-log-common"
version = "0.1.11-dev.0"
description = "A logging library for eBPF programs."
keywords = ["ebpf", "bpf", "log", "logging"]
license = "MIT OR Apache-2.0"
authors = ["The Aya Contributors"]
repository = "https://github.com/aya-rs/aya-log"
documentation = "https://docs.rs/aya-log"
edition = "2018"

[features]
default = []
userspace = [ "aya" ]

[dependencies]
aya = { version = "0.11.0", optional=true }

[lib]
path = "src/lib.rs"
