[package]
name = "aya-log"
version = "0.1.11-dev.0"
description = "A logging library for eBPF programs."
keywords = ["ebpf", "bpf", "log", "logging"]
license = "MIT OR Apache-2.0"
authors = ["The Aya Contributors"]
repository = "https://github.com/aya-rs/aya-log"
readme = "README.md"
documentation = "https://docs.rs/aya-log"
edition = "2018"

[dependencies]
aya = { version = "0.11.0", features=["async_tokio"] }
aya-log-common = { version = "0.1.11-dev.0", path = "../aya-log-common", features=["userspace"] }
dyn-fmt = "0.3.0"
thiserror = "1"
log = "0.4"
bytes = "1.1"
tokio = { version = "1.2.0" }

[dev-dependencies]
simplelog = "0.12"
testing_logger = "0.1.1"

[lib]
path = "src/lib.rs"
