config_setting(
    name = "linux_aarch64",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    visibility = ["//visibility:public"],
)

platform(
    name = "rbe_x86_64_linux",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "@llvm//constraints/libc:gnu.2.28",
    ],
    exec_properties = {
        "Arch": "amd64",
        "OSFamily": "Linux",
        "container-image": "docker://ubuntu:24.04",
    },
    visibility = ["//visibility:public"],
)

alias(
    name = "bpf-linker",
    actual = select({
        ":linux_aarch64": "@bpf_linker_aarch64_unknown_linux_musl//:bpf-linker",
        ":linux_x86_64": "@bpf_linker_x86_64_unknown_linux_musl//:bpf-linker",
    }),
    visibility = ["//visibility:public"],
)
