[package]
name = "aya-bpf"
version = "0.1.0"
authors = ["Alessandro Decina <alessandro.d@gmail.com>"]
edition = "2021"

[dependencies]
aya-bpf-cty = { path = "../aya-bpf-cty" }
aya-bpf-macros = { path = "../../aya-bpf-macros" }
aya-bpf-bindings = { path = "../aya-bpf-bindings" }
aya-common = { path = "../../aya-common", optional = true }

[build-dependencies]
rustversion = "1.0"

[features]
usdt = ["aya-common"]
cookie = ["usdt"]
